--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
     <title>Edu Expert</title>
 </head>
 <body>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-md bg-white py-3">
+            <div class="container">
+                <a href="#" class="navbar-brand fs-4 fw-semibold primary-clr">Edu Expert</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="navbarMenu"  class="collapse navbar-collapse">
+                    <ul  class="nav navbar-nav mx-auto fs-6">
+                        <li class="nav-item px-3">
+                            <a href="#" class="nav-link text-muted">Home</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a href="#" class="nav-link text-muted">Courses</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a href="#" class="nav-link text-muted">Deals</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a href="#" class="nav-link text-muted">Success</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a href="#" class="nav-link text-muted">About</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a href="#" class="nav-link text-muted">Register</a>
+                        </li>
+                    </ul>
+                    <button class="btn btn-outline-primary border-2 px-4 rounded-1" type="submit">Register</button>
+                </div>
+            </div>
+        </nav>
+
+        
+    </header>
+
+
    
     <!-- Bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
