course section done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-md bg-white py-3">
+        <nav class="navbar navbar-expand-lg bg-white py-3">
             <div class="container">
                 <a href="#" class="navbar-brand fs-4 fw-semibold primary-clr">Edu Expert</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
@@ -98,6 +98,117 @@
           </div>
     </section>
 
+    <main class="container">
+        <section id="courses">
+            <div class="caption text-center">
+                <h2 class="fs-1 fw-bold text-black pb-2">Discover Our Popular Courses</h2>
+                <p class="text-muted">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="row g-3">
+                <div class="col-12 col-lg-6">
+                    <div class="card mb-3">
+                        <div class="row g-0 d-flex align-items-center">
+                          <div class="col-12 col-md-4" >
+                            <img src="images/course/course-1.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-12 col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card mb-3">
+                        <div class="row g-0 d-flex align-items-center">
+                          <div class="col-12 col-md-4" >
+                            <img src="images/course/course-2.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-12 col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card mb-3">
+                        <div class="row g-0 d-flex align-items-center">
+                          <div class="col-12 col-md-4" >
+                            <img src="images/course/course-3.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-12 col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card mb-3">
+                        <div class="row g-0 d-flex align-items-center">
+                          <div class="col-12 col-md-4" >
+                            <img src="images/course/course-4.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-12 col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card mb-3">
+                        <div class="row g-0 d-flex align-items-center">
+                          <div class="col-12 col-md-4" >
+                            <img src="images/course/course-5.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-12 col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card mb-3">
+                        <div class="row g-0 d-flex align-items-center">
+                          <div class="col-12 col-md-4" >
+                            <img src="images/course/course-6.png" class="w-100 w-md-50 img-fluidrounded-start" alt="..."> 
+                          </div>
+                          <div class="col-12 col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
+                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                
+            </div>
+            
+
+        </section>
+
+    </main>
 
 
    
