--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="sticky-top">
       <!-- Navbar section  -->
-        <nav class="navbar navbar-expand-lg bg-white py-2">
+        <nav class="navbar navbar-expand-lg bg-white py-1">
             <div class="container">
                 <a href="#" class="navbar-brand fs-1 fw-semibold primary-clr">Edu Expert</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
@@ -30,10 +30,10 @@
                             <a href="#" class="nav-link text-muted">Courses</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a href="#" class="nav-link text-muted">Deals</a>
+                            <a href="#" class="nav-link text-muted">Explore</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a href="#" class="nav-link text-muted">Success</a>
+                            <a href="#" class="nav-link text-muted">Categories</a>
                         </li>
                         <li class="nav-item px-3">
                             <a href="#" class="nav-link text-muted">About</a>
@@ -52,7 +52,7 @@
     <!-- banner section  -->
 
     <section id="banner">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -63,7 +63,7 @@
                 <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
                   <h1 class="fw-semibold p-3">Get Started Digital Learning</h1>
-                  <p class="fs-6 fs-md-5 text-light pb-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <p class="fs-6 fs-md-5 text-light pb-2">Start, switch, or advance your career with more than 5,000 courses, Professional Certificates, and degrees from world-class universities and companies.</p>
                   <div class="slider-btn">
                     <button class="btn btn-outline-primary btn-edu" type="submit">Get Started</button>
                   </div>
@@ -73,7 +73,7 @@
                 <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
                   <h1 class="fw-semibold p-3">Get Started Digital Learning</h1>
-                  <p class="fs-6  fs-md-5 text-light pb-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <p class="fs-6  fs-md-5 text-light pb-2">Start, switch, or advance your career with more than 5,000 courses, Professional Certificates, and degrees from world-class universities and companies.</p>
                   <div class="slider-btn">
                     <button class="btn btn-outline-primary btn-edu" type="submit">Get Started</button>
                   </div>
@@ -83,7 +83,7 @@
                 <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
                   <h1 class="fw-semibold p-3">Get Started Digital Learning</h1>
-                  <p class="fs-6 fs-md-5 text-light pb-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  <p class="fs-6 fs-md-5 text-light pb-2">Start, switch, or advance your career with more than 5,000 courses, Professional Certificates, and degrees from world-class universities and companies.</p>
                   <div class="slider-btn">
                     <button class="btn btn-outline-primary btn-edu" type="submit">Get Started</button>
                   </div>
@@ -210,8 +210,43 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
-                <button class="btn btn-outline-primary btn-edu" type="submit">Get Started</button>
+                <button class="btn btn-outline-primary btn-edu" type="submit">View All</button>
             </div>
+
+        </section>
+
+        <section id="elearning">
+          <div class="row g-0 bg-light align-items-center justify-content-center">
+            <div class="col-12 col-md-5">
+              <img class="img-fluid h-100" src="images/working.png" alt="">
+            </div>
+            <div class="col-12 col-md-7 px-5 py-4">
+              <div>
+                <h2 class=" fs-1  fw-bold text-black pb-2">Explore The elearning Institute</h2>
+                <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure <span class="d-lg-none">... <a class="link-info" href="#">See More</a></span>
+                  </p>
+                  <p class="text-muted d-none d-lg-block">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+                <div class="row mb-4">
+                  <div class="col">
+                    <h1 class="fs-1 fw-bold">3.2K+</h1>
+                    <p class="text-muted fs-6">Online Course</p>
+                  </div>
+                  <div class="col">
+                    <h1 class="fs-1 fw-bold">600+</h1>
+                    <p class="text-muted fs-6">Expert member</p>
+                  </div>
+                  <div class="col">
+                    <h1 class="fs-1 fw-bold">1k+</h1>
+                    <p class="text-muted fs-6">Rating & Review</p>
+                  </div>
+                </div>
+                <button class="btn btn-outline-primary btn-edu" type="submit">Read More</button>
+
+              </div>
+
+
+            </div>
+          </div>
         </section>
 
         <!-- ready to join section  -->
@@ -236,11 +271,11 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title">Modal title</h5>
+                        <h5 class="modal-title">Get 20% Off on first enroll</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <p>Modal body text goes here.</p>
+                        <p class="text-center">Are you a Beginner? <br> So don't be late to grab the chance.</p>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
@@ -348,7 +383,7 @@
 
     <footer class="container-fluid bg-dark" >
       <div class="d-flex flex-column align-items-center justify-content-center">
-        <h2 class="fs-1 fw-semibold text-white mb-3">Edu Care</h2>
+        <h2 class="fs-1 fw-semibold text-white mb-3">Edu Expert</h2>
         <p class="text-light mb-0 pb-1 text-center">Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
         
         <p class="text-light mb-3">
