--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         </li>
                     </ul>
                     <button class="btn btn-outline-primary border-2 px-4 rounded-1" type="submit">Register</button>
+                    <button class="btn btn-primary border-2 mx-2 px-3 rounded-1" type="submit">Log in</button>
                 </div>
             </div>
         </nav>
@@ -108,7 +109,7 @@
         <section id="courses">
             <div class="caption text-center mb-4">
                 <h2 class="fs-1 fw-bold text-black pb-2">Discover Our Popular Courses</h2>
-                <p class="text-muted">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="text-muted">Edu Expert's most popular courses of 2020 show learners striving to gain control of their mental health, better understand COVID-19, develop job-relevant skills, and pursue personal passions. As we look at the year's trends, we are inspired by the millions of learners who continued to make progress on their learning goals in spite of the challenges they faced.</p>
             </div>
 
             <div class="row g-3">
@@ -120,9 +121,9 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                              <h5 class="card-title primary-clr fw-semibold">Front-End Development</h5>
+                              <p class="card-text text-muted">Front-end web development is the practice of producing HTML, CSS and JavaScript for a Web Application so that a user can see and interact with them directly. </p>
+                              <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
                         </div>
@@ -136,9 +137,9 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                              <h5 class="card-title primary-clr fw-semibold">Back-End Development</h5>
+                              <p class="card-text text-muted">Backend developers build code that allows a database and an application to communicate with one another.</p>
+                              <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
                         </div>
@@ -152,9 +153,9 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                              <h5 class="card-title primary-clr fw-semibold">UI/UX Design</h5>
+                              <p class="card-text text-muted">UX design is all about identifying and solving user problems; UI design is all about creating intuitive, aesthetically-pleasing, interactive </p>
+                              <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
                         </div>
@@ -168,9 +169,9 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                              <h5 class="card-title primary-clr fw-semibold">Digital Marketing</h5>
+                              <p class="card-text text-muted">Digital marketing, also called online marketing, is the promotion of brands to connect with potential customers using the internet and other forms of digital</p>
+                              <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
                         </div>
@@ -184,9 +185,9 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                              <h5 class="card-title primary-clr fw-semibold">Programming For Everybody</h5>
+                              <p class="card-text text-muted">It is the process of creating a set of instructions that tell a computer how to perform a task. Some programming languages are JavaScript, Python, and C++ etc.</p>
+                              <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
                         </div>
@@ -200,9 +201,9 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Fundamental Of UI/UX Design</h5>
-                              <p class="card-text text-muted">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                              <h5 class="text-primary fw-semibold">Price: 20$</h5>
+                              <h5 class="card-title primary-clr fw-semibold">Full-Stack Development</h5>
+                              <p class="card-text text-muted"> It refers to the development of both front end(client side) and back end(server side) portions of web application.</p>
+                              <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
                         </div>
@@ -223,9 +224,9 @@
             <div class="col-12 col-md-7 px-5 py-4">
               <div>
                 <h2 class=" fs-1  fw-bold text-black pb-2">Explore The elearning Institute</h2>
-                <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure <span class="d-lg-none">... <a class="link-info" href="#">See More</a></span>
+                <p class="text-muted">This guide summarizes current research and commentary on e-learning, examining the key issues facing organizations exploring e-learning for employee development. The guide contains six sections. The first section provides an introduction to the issue of e-learning and a summary of the issues discussed in the remainder of the guide.<span class="d-lg-none">... <a class="link-info" href="#">See More</a></span>
                   </p>
-                  <p class="text-muted d-none d-lg-block">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+                  <p class="text-muted d-none d-lg-block"> Section 2 summarizes the various dimensions and descriptions of e-learning, concluding with a definition of e-learning as "the delivery and administration of learning opportunities and support via computer, networked and web-based technology to help individual performance and development." </p>
                 <div class="row mb-4">
                   <div class="col">
                     <h1 class="fs-1 fw-bold">3.2K+</h1>
@@ -257,7 +258,8 @@
                 <div class="row align-items-center text-center text-lg-start">
                     <div class="col-12 col-lg-7">
                         <h3 class="mb-3 fs-2 fw-semibold">Ready to join?</h3>
-                        <p class="text-light mb-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="text-light mb-4">Join Edu Expert for free. Create a profile to get a personalized learning experience with course recommendations.
+                        </p>
                     </div>
                     <div class="col-12 col-lg-5 text-lg-end">
                         <button data-bs-toggle="modal" data-bs-target="#myModal" class="btn-reg" type="submit">Registration</button>
@@ -292,7 +294,7 @@
         <section id="faq">
           <div class="caption text-center mb-4">
               <h2 class="fs-1 fw-bold text-black pb-2">Frequently Asked Questions</h2>
-              <p class="text-muted">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <p class="text-muted">These are the 4 most popular questions Edu Expert receives. Frequently Asked Questions About Web Development.</p>
           </div>
           <div class="row">
             <div class="col-md-2">
@@ -384,7 +386,7 @@
     <footer class="container-fluid bg-dark" >
       <div class="d-flex flex-column align-items-center justify-content-center">
         <h2 class="fs-1 fw-semibold text-white mb-3">Edu Expert</h2>
-        <p class="text-light mb-0 pb-1 text-center">Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
+        <p class="text-light mb-0 pb-1 text-center">1353, 8/A, Central road, Nurpur, Dania, Dhaka-1236</p>
         
         <p class="text-light mb-3">
           <a class="link-light text-decoration-none" href="#">Privacy Ploicy</a> 
