--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="row g-0 d-flex align-items-center">
                           <div class="col-12 col-md-4" >
                             <img src="images/course/course-2.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
-                          </div>
+                          <
                           <div class="col-12 col-md-8">
                             <div class="card-body">
                               <h5 class="card-title primary-clr fw-semibold">Back-End Development</h5>
@@ -358,23 +358,23 @@
               <h2 class="fs-1 fw-bold text-black pb-2">Trusted by over 800+ companies</h2>
             </div>
 
-            <div class="row g-2">
-                <div class="col-2">
+            <div class="d-flex justify-content-between">
+                <div>
                   <img src="images/company/company-1.png" class="h-50"  alt="">
                 </div>
-                <div class="col-2">
+                <div>
                   <img src="images/company/company-2.png" class="h-75"  alt="">
                 </div>
-                <div class="col-2">
+                <div>
                   <img src="images/company/company-3.png" class="h-75" alt="">
                 </div>
-                <div class="col-2">
+                <div>
                   <img src="images/company/company-4.png" class="h-50" alt="">
                 </div>
-                <div class="col-2">
+                <div>
                   <img src="images/company/company-5.png" class="h-75" alt="">
                 </div>
-                <div class="col-2">
+                <div>
                   <img src="images/company/company-6.png" class="h-75" alt="">
                 </div>
             </div>
