--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <p class="text-muted">Edu Expert's most popular courses of 2020 show learners striving to gain control of their mental health, better understand COVID-19, develop job-relevant skills, and pursue personal passions. As we look at the year's trends, we are inspired by the millions of learners who continued to make progress on their learning goals in spite of the challenges they faced.</p>
             </div>
 
-            <div class="row g-3">
+            <div class="row g-2">
                 <div class="col-12 col-lg-6">
                     <div class="card mb-3">
                         <div class="row g-0 d-flex align-items-center">
@@ -134,7 +134,7 @@
                         <div class="row g-0 d-flex align-items-center">
                           <div class="col-12 col-md-4" >
                             <img src="images/course/course-2.png" class="w-100 w-md-50 img-fluid rounded-start" alt="...">
-                          <
+                          </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
                               <h5 class="card-title primary-clr fw-semibold">Back-End Development</h5>
