--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">Front-End Development</h5>
-                              <p class="card-text text-muted">Front-end web development is the practice of producing HTML, CSS and JavaScript for a Web Application so that a user can see and interact with them directly. </p>
+                              <h5 class="card-title primary-clr fw-semibold">UI/UX Design</h5>
+                              <p class="card-text text-muted">UX design is all about identifying and solving user problems; UI design is all about creating intuitive, aesthetically-pleasing, interactive </p>
                               <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
@@ -153,8 +153,8 @@
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title primary-clr fw-semibold">UI/UX Design</h5>
-                              <p class="card-text text-muted">UX design is all about identifying and solving user problems; UI design is all about creating intuitive, aesthetically-pleasing, interactive </p>
+                              <h5 class="card-title primary-clr fw-semibold">Front-End Development</h5>
+                              <p class="card-text text-muted">Front-end web development is the practice of producing HTML, CSS and JavaScript for a Web Application so that a user can see and interact with them directly. </p>
                               <h5 class="text-primary fw-semibold">Price: $25</h5>
                             </div>
                           </div>
@@ -197,7 +197,7 @@
                     <div class="card mb-3">
                         <div class="row g-0 d-flex align-items-center">
                           <div class="col-12 col-md-4" >
-                            <img src="images/course/course-6.png" class="w-100 w-md-50 img-fluidrounded-start" alt="..."> 
+                            <img src="images/course/course-6.png" class="w-100 w-md-50 img-fluid rounded-start" alt="..."> 
                           </div>
                           <div class="col-12 col-md-8">
                             <div class="card-body">
@@ -396,7 +396,7 @@
         <div class="social-links">
           <a class="bg-dark text-light bg-gradient px-2 py-1 mx-1" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
           <a class="bg-dark text-light bg-gradient px-2 py-1 mx-1" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-          <a class="bg-dark text-light bg-gradient px-2 py-1 mx-1" href="https://www.premierleague.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          <a class="bg-dark text-light bg-gradient px-2 py-1 mx-1" href="https://www.twitter.com/Codecademy" target="_blank"><i class="fa-brands fa-twitter"></i></a>
           <a class="bg-dark text-light bg-gradient px-2 py-1 mx-1" href="https://www.linkedin.com/in/tahmina-riya-11b0761a0/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
       </div>
       </div>
