--- a/index.html
+++ b/index.html
@@ -217,31 +217,31 @@
         </section>
 
         <section id="elearning">
-          <div class="row g-0 bg-light align-items-center justify-content-center">
-            <div class="col-12 col-md-5">
+          <div class="row g-0 bg-light ">
+            <div class="col-12 col-md-6 col-lg-5 ">
               <img class="img-fluid h-100" src="images/working.png" alt="">
             </div>
-            <div class="col-12 col-md-7 px-5 py-4">
-              <div>
-                <h2 class=" fs-1  fw-bold text-black pb-2">Explore The elearning Institute</h2>
+            <div class="col-12 col-md-6 col-lg-7 px-4 py-4">
+              <div class="d-flex flex-column justify-content-center">
+                <h1 class="fs-1  fw-bold text-black pb-2">Explore The elearning Institute</h1>
                 <p class="text-muted">This guide summarizes current research and commentary on e-learning, examining the key issues facing organizations exploring e-learning for employee development. The guide contains six sections. The first section provides an introduction to the issue of e-learning and a summary of the issues discussed in the remainder of the guide.<span class="d-lg-none">... <a class="link-info" href="#">See More</a></span>
                   </p>
                   <p class="text-muted d-none d-lg-block"> Section 2 summarizes the various dimensions and descriptions of e-learning, concluding with a definition of e-learning as "the delivery and administration of learning opportunities and support via computer, networked and web-based technology to help individual performance and development." </p>
                 <div class="row mb-4">
-                  <div class="col">
-                    <h1 class="fs-1 fw-bold">3.2K+</h1>
+                  <div class="col col-md-6 col-lg-4">
+                    <h2 class="fs-2 fw-bold">3.2K+</h2>
                     <p class="text-muted fs-6">Online Course</p>
                   </div>
-                  <div class="col">
-                    <h1 class="fs-1 fw-bold">600+</h1>
+                  <div class="col col-md-6 col-lg-4">
+                    <h2 class="fs-2 fw-bold">600+</h2>
                     <p class="text-muted fs-6">Expert member</p>
                   </div>
-                  <div class="col">
-                    <h1 class="fs-1 fw-bold">1k+</h1>
+                  <div class="col col-lg-4">
+                    <h2 class="fs-2 fw-bold">1k+</h2>
                     <p class="text-muted fs-6">Rating & Review</p>
                   </div>
                 </div>
-                <button class="btn btn-outline-primary btn-edu" type="submit">Read More</button>
+                <button class="btn btn-outline-primary btn-edu mx-auto" type="submit">Read More</button>
 
               </div>
 
